SIP-10171:fixing alignment and validation issues on filter pop up

--- a/sip-web/src/app/common/dsk-filter-dialog/dsk-filter-dialog.component.scss
+++ b/sip-web/src/app/common/dsk-filter-dialog/dsk-filter-dialog.component.scss
@@ -2,8 +2,8 @@
 
 :host {
   display: block;
-  min-width: 300px;
-  min-height: 200px;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 ::ng-deep code {
@@ -17,8 +17,8 @@
 }
 
 ::ng-deep add-attribute-dialog {
-  max-width: 860px;
-  width: 860px;
+  max-width: 100%;
+  width: 100%;
 
   .base-dialog__header {
     padding: 0 0 10px;
