--- a/sip-web/src/app/modules/admin/datasecurity/add-attribute-dialog/add-attribute-dialog.component.scss
+++ b/sip-web/src/app/modules/admin/datasecurity/add-attribute-dialog/add-attribute-dialog.component.scss
@@ -1,8 +1,8 @@
 @import "src/themes/base/colors";
 
 ::ng-deep add-attribute-dialog {
-  max-width: 860px;
-  width: 860px;
+  max-width: 100%;
+  width: 100%;
 
   .base-dialog__header {
     padding: 0 0 10px;
